--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -17,10 +17,10 @@ spec:
     spec:
       containers:
         - name: code-healer
-          image: parthsinha/code-healer-app:latest
+          image: parthsinha90/code-healer-react-app:latest
           imagePullPolicy: Always
           ports:
-          - containerPort: 80
+          - containerPort: 8080
             protocol: TCP
           resources:
             requests:
@@ -32,7 +32,7 @@ spec:
           livenessProbe:
             httpGet:
               path: /
-              port: 80
+              port: 8080
             initialDelaySeconds: 30
             periodSeconds: 10
             timeoutSeconds: 5
@@ -40,11 +40,14 @@ spec:
           readinessProbe:
             httpGet:
               path: /
-              port: 80
+              port: 8080
             initialDelaySeconds: 10
             periodSeconds: 5
             timeoutSeconds: 3
             failureThreshold: 3
+          securityContext:
+            capabilities:
+              add: ["NET_BIND_SERVICE"]
       securityContext:
         runAsNonRoot: true
         runAsUser: 101
